frontend/test/should_pass/deque_model_002.gm
node class A
{
	intValue: int;
	stringValue: string;
	intDeque: deque<int>;
	stringDeque: deque<string>;
}