frontend/test/should_fail/set_model_001.gm
node class A
{
	intValue: int;
	stringValue: string;
	intSet: set<int>;
	stringSet: set<string>;
	const constIntSet: set<int>;
	const constStringSet: set<string>;
}